update some images

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: "Describe this nonsense."
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 comments: false
 image:
-  feature: rain1.jpg
+  feature: rain1a.jpg
   credit: 
   creditlink: 
 ---
